· 055: update task docs to reflect A/B/C complete, D/E pending